<resources>
    <string name="app_name">You Owe Me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddFirstNameView">Firstname:</string>
    <string name="AddLastNameView">Lastname:</string>
    <string name="AddDebtorButtonText">Add Debtor</string>
    <string name="AddPhoneNumberView">Phone Number</string>
    <string name="AddEmailView">Email</string>
    <string name="AddDateView">Pick Pay Date</string>
    <string name="AddPaymentAmountView">Amount Owed</string>
    <string name="AddDebtorView">Add Debtor</string>
    <string name="PayDebtorsView">Pay Debt</string>
    <string name="SearchViewHint">Firstname and Lastname</string>
</resources>
